fix(dark-mode): fix some wrong colors

--- a/packages/kotti-ui/source/kotti-field/mixins.scss
+++ b/packages/kotti-ui/source/kotti-field/mixins.scss
@@ -367,7 +367,7 @@
 		color: $main-color;
 
 		// overwrites native behavior when disabled
-		background-color: var(--ui-background);
+		background-color: transparent;
 
 		&:disabled {
 			color: $disabled-color;
